[package]
name = "pdf_parser"
version = "0.1.0"
authors = ["Connor Skees <connor1skees@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/pdf_parser"
readme = "README.md"
repository = "https://github.com/connorskees/pdf/"
license = "MIT"
description = "PDF parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pdf"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "pdf"
path = "src/main.rs"


[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
bitvec = { git = "https://github.com/connorskees/bitvec", branch = "feat/more-track-caller", default-features = false, features = ["std"] }
aes = "0.8.2"
cbc = "0.1.2"
md5 = "0.7.0"
fixed = "1.23.1"
flate2 = "1.0.20"
jpeg-decoder = { version = "0.1.22", default-features = false }
minifb = { version = "0.19.3", optional = true }
once_cell = "1.17.2"
pdf_macro = { path = "pdf_macro" }
png = "0.17.8"

[features]
window = ["minifb"]